[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "openburst"
authors = [
    {name = "Zenon Mathews", email = "zenon.mathews@vtg.admin.ch", name = "Romain Chessex", email = "romain.chessex@vtg.admin.ch"}
]
description = "A target and sensor simulator for air surveillance"
version = "1.0"
readme = "README.md"
requires-python = "3.10"
dependencies = [
    'pyproj>=3.5.0',
    'psutil>=5.9.5',
    'numpy>=1.24.3',
    'psycopg2>=2.9.6',
    'haversine>=2.8.0',
    'geographiclib>=2.0',
    'matplotlib>=3.7.1',
    'matplotlib-inline>=0.1.6',
    'geopy>=2.3.0',
    'tornado>=6.3.1',
    'websocket-client>=1.5.1',
    'simplekml>=1.3.6',
    'oct2py>=5.6.0',
    'geopandas>=0.13.2',
    'pandas>=2.0.1',
    'pyeval>=0.2',
    'scipy>=1.10.1 ',
    'pytest>=8.1.1',
]

license = {file = "LICENSE"}
keywords = ["radar", "simulation", "passive radar", "target", "coverage", "detection", "air", "surveillance"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python, C++, html, javascript"
]

